--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,14 @@
-Hello, world. {{ name }}
+{% extends 'base.html' %}
+
+{% block content %}
+<div class="container" style='margin: 0px; padding: 0px;'>
+  <div class="row">
+    <div id='folders' class="col-2">Loading...</div>
+    <div class="col">
+      <div id='listing'>Loading...</div>
+      <div id='mail'></div>
+    </div>
+  </div>
+</div>
+<div id='pre-folders' class='d-none'>foo</div>
+{% endblock %}
