--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>PodMail</title>
-        <!--<meta name='description'>PodMail - an ESI Eve EveMail client.</meta>-->
+        <meta name='description' content='PodMail - an ESI EveMail client'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <!--<link rel="stylesheet" href="/css/cyborg.css">-->
         <link rel="stylesheet" href="/css/podmail.css">
