--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="container" style='margin: 0px; padding: 0px;'>
   <div class="row">
     <div id='folders' class="col-2">Loading...</div>
-    <div class="col">
+    <div class="col-10">
       <div id='listing'>Loading...</div>
       <div id='mail'></div>
     </div>
