--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,5 +1,5 @@
 <hr/>
-<a href='#' id='showlisting'>Back...</a> Reply Forward
+<a href='#' id='showlisting'>Back...</a> Reply Forward <button class="btn btn-primary" id='delete_btn' mail_id='{{ mail.mail_id }}' type="submit">Delete</button>
 <hr/>
 From: {{ mail.from_name }}<br/>
 To: 
@@ -7,8 +7,11 @@ To:
 {% for recip in mail.recipients %}
     {% if first == false %}, {% endif %}
     {{ recip.recipient_name }}
-{% endfor %}
+{% endfor %}<br/>
+{{ mail.dttm }}
 <hr/>
 Subject: {{ mail.subject }}
 <hr/>
 {{ mail.body|raw }}
+<hr/>
+<small>mail_id:{{ mail.mail_id }}</small>
