--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">PodMail</a>
+  <a class="navbar-brand" href="#"><img src='/images/evemail.png' height='32' /> PodMail</a>
      <ul class="navbar-nav mr-auto"></ul>
      <ul class="navbar-nav m1-auto">
       {% if character_id %}
