--- a/templates/mails.html
+++ b/templates/mails.html
@@ -1,6 +1,6 @@
 {% for mail in mails %}
     <hr/>
-    <a class="subjectrow" id="mail-{{ mail.mail_id }}" href="/mail/{{ mail.mail_id }}"><div class="{{ (mail.is_read == 1 ) ? '' : 'unread' }} {{ mail.deleted == 1 ? 'strike' : '' }}"><span class="from">{{ mail.from_name }}</span> {{ mail.subject }}</div></a>
+    <a class="subjectrow" id="mail-{{ mail.mail_id }}" href="/mail/{{ mail.mail_id }}"><div class="{{ (mail.is_read == 1 ) ? '' : 'unread' }} {{ mail.deleted == 1 ? 'strike' : '' }}"><span class="from">{{ mail.from_name }}</span><span class='subject'>{{ mail.subject }}</span></div></a>
 {% endfor %}
 {% if mails|length == 0 %}
 <i>No mails to display...</i>
