--- a/templates/nav.html
+++ b/templates/nav.html
@@ -4,7 +4,7 @@
      <ul class="navbar-nav m1-auto">
       {% if character_id %}
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ character_name }} <img src='https://imageserver.eveonline.com/Character/{{ character_id }}_32.jpg' /></a>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ character_name }} <img src='https://imageserver.eveonline.com/Character/{{ character_id }}_32.jpg' width='32'/></a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
            <a class="dropdown-item" href="/logout">Logout</a>
         </div>
