--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,13 +1,14 @@
 <hr/>
-<a href='#' id='showlisting'>Back...</a> Reply Forward <button class="btn btn-primary" id='delete_btn' mail_id='{{ mail.mail_id }}' type="submit">Delete</button>
+<a href='#' id='showlisting'>Back...</a>
+{% if mail.is_notifcation != true %}
+Reply Forward
+<button class="btn btn-primary" id='delete_btn' mail_id='{{ mail.mail_id }}' type="submit">Delete</button>
+{% endif %}
 <hr/>
 From: {{ mail.from_name }}<br/>
 To: 
 {% set first = true %}
-{% for recip in mail.recipients %}
-    {% if first == false %}, {% endif %}
-    {{ recip.recipient_name }}
-{% endfor %}<br/>
+{% for recip in mail.recipients %}{% if first == false %}, {% endif %}{{ recip.recipient_name }}{% set first = false %}{% endfor %}<br/>
 {{ mail.dttm }}
 <hr/>
 Subject: {{ mail.subject }}
