--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,13 @@
     <head>
         <title>PodMail</title>
         <meta name='description' content='PodMail - an ESI EveMail client'>
+
+        <meta property="og:url" content="https://podmail.zzeve.com">
+        <meta property="og:title" content="PodMail - an ESI Evemail client">
+        <meta property="og:description" content="Access, manipulate, and send evemails from any web capable device.">
+        <meta property="og:site_name" content="PodMail">
+        <meta property=”og:image" content="https://podmail.zzeve.com/images/podmail.png">
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.css">
         <link rel="stylesheet" href="/css/podmail.css">
