--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src='/images/podmail.png' height='32' /> PodMail</a>
+  <a class="navbar-brand" href="/"><img src='/images/podmail.png' height='32' /> PodMail</a>
      <ul class="navbar-nav mr-auto"></ul>
      <ul class="navbar-nav m1-auto">
       {% if character_id %}
@@ -10,7 +10,7 @@
         </div>
       </li>
       {% else %}
-      <li><a href="/ccp-login"><img src="/images/ssologin.png" height="30"/></li>
+      <li><a href="/ccp-login"><img src="/images/ssologin.png" height="30"/></a></li>
       {% endif %}
     </ul>
 </nav>
