--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <div class="col-10">
       <div id='listing'>Loading...</div>
       <div id='mail'></div>
+      {% include 'compose.html' %}
     </div>
   </div>
 </div>
