--- a/templates/folders.html
+++ b/templates/folders.html
@@ -1,3 +1,5 @@
+<hr/>
+<button type="submit" id="compose-start" class="btn btn-primary btn-sm">Compose</button>
 {% for folder in folders %}
 <hr/>
 <a href="/folder/{{ folder.id }}" id="folder-{{ folder.id }}" folder="{{ folder.id }}" class="folder-link folder-{{ folder.id }}">{{ folder.name }} <span class='float-right'>{% if folder.unread > 0 %}<span class='unread'>{{ folder.unread }}</span> / {% endif %}{% if folder.count > 0 %}<span class='noweight'>{{ folder.count }}</span>{% endif %}</span></a>
