--- a/templates/about.html
+++ b/templates/about.html
@@ -13,6 +13,7 @@
 <p>To Do:
 </p>
 <ul>
+<li>Adding/Removing labels from mails</li>
 <li>Mass delete and mass marking read/unread</li>
 </ul>
 <p>Check it out!<br/><a href='/ccp-login'><img src='https://podmail.zzeve.com/images/ssologin.png'></a></p>
