--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
         <meta property="og:description" content="Access, manipulate, and send evemails from any web capable device.">
         <meta property="og:site_name" content="PodMail">
         <meta property=”og:image" content="https://podmail.zzeve.com/images/podmail.png">
+        <meta property="og:image:width" content="477"/>
+        <meta property="og:image:height" content="270"/>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.css">
@@ -28,6 +30,6 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.js"></script>
         <script src="/gre/jquery.gre.js"></script>
-        <script type="text/javascript" src="/js/podmail.js"></script>
+        <script type="text/javascript" src="/js/podmail.js?v={{ random() }}"></script>
     </body>
 </html>
