--- a/templates/mails.html
+++ b/templates/mails.html
@@ -14,9 +14,7 @@
     <hr/>
     <a class="subjectrow" id="mail-{{ mail.mail_id }}" href="/mail/{{ mail.mail_id }}">
         <div class="{{ (mail.is_read == 1 ) ? '' : 'unread' }} {{ mail.deleted == 1 ? 'strike' : '' }}">
-            <span class="from">{{ mail.from_name }}</span>
-            <span class='subject'>{{ mail.subject|raw }}</span>
-            <span class='float-right'>{{ mail.dttm }}</span>
+            <span class="from">{{ mail.from_name }}</span><span class='subject'>{{ mail.subject|raw }}</span><span class='float-right'>{{ mail.dttm }}</span>
         </div>
     </a>
 {% endfor %}
