--- a/templates/mails.html
+++ b/templates/mails.html
@@ -6,16 +6,25 @@
         <i>No mails to display...</i>
     {% endif %}
 {% else %}
+<div class="form-check" id="checkbox-master">
+    <input  id='mass-checkbox' type='checkbox' class="form-check-input mail-checkbox"/>
+    <button id='mass-read' class='btn btn-sm btn-secondary' disabled='true'>Mark as Read</button>
+    <button id='mass-unread' class='btn btn-sm btn-secondary' disabled='true'>Mark as Unread</button>
+    <button id='mass-delete' class='btn btn-sm btn-secondary' disabled='true'>Delete</button>
 <div class="float-right">
-<a href='' id='prevpage'>&lt;</a> Page {{ page }} / {{ max }} <a href='' id='nextpage' max='{{ max }}'>&gt;</a>
+{% set start = (page * 25) - 24 %}
+<a href='' id='prevpage'>&lt;</a> {{ start }} - {{ start + mails|length - 1 }} of {{ count }} <a href='' id='nextpage' max='{{ max }}'>&gt;</a>
 </div>
-<br/>
+</div>
 {% for mail in mails %}
     <hr/>
+<div class="form-check">
+    <input type='checkbox' id='checkbox-{{ mail.mail_id}}' mail_id="{{ mail.mail_id }}" class="form-check-input mail-checkbox"/>
     <a class="subjectrow" id="mail-{{ mail.mail_id }}" href="/mail/{{ mail.mail_id }}">
-        <div class="{{ (mail.is_read == 1 ) ? '' : 'unread' }} {{ mail.deleted == 1 ? 'strike' : '' }}">
+        <div class="{{ (mail.is_read == 1 ) ? '' : 'unread' }} {{ mail.deleted == 1 ? 'strike' : '' }} mail-{{ mail.mail_id}}">
             <span class="from">{{ mail.from_name }}</span><span class='subject'>{{ mail.subject|raw }}</span><span class='float-right'>{{ mail.dttm }}</span>
         </div>
     </a>
+    </div>
 {% endfor %}
 {% endif %}
