--- a/templates/mails.html
+++ b/templates/mails.html
@@ -8,9 +8,9 @@
 {% else %}
 <div class="form-check" id="checkbox-master">
     <input  id='mass-checkbox' type='checkbox' class="form-check-input mail-checkbox"/>
-    <button id='mass-read' class='btn btn-sm btn-secondary' disabled='true'>Mark as Read</button>
-    <button id='mass-unread' class='btn btn-sm btn-secondary' disabled='true'>Mark as Unread</button>
-    <button id='mass-delete' class='btn btn-sm btn-secondary' disabled='true'>Delete</button>
+    <button id='mass-read' class='btn btn-sm btn-secondary' disabled='true'><i class="fas fa-envelope-open"></i></button>
+    <button id='mass-unread' class='btn btn-sm btn-secondary' disabled='true'><i class="fas fa-envelope"></i></button>
+    <button id='mass-delete' class='btn btn-sm btn-secondary' disabled='true'><i class="fas fa-trash-alt"></i></button>
 <div class="float-right">
 {% set start = (page * 25) - 24 %}
 <a href='' id='prevpage'>&lt;</a> {{ start }} - {{ start + mails|length - 1 }} of {{ count }} <a href='' id='nextpage' max='{{ max }}'>&gt;</a>
