--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,5 +1,5 @@
 <hr/>
-<a href='#' id='showlisting'><i class="fas fa-arrow-left"></i></a>&nbsp;&nbsp;
+<a href='#' id='showlisting'><i class="fas fa-arrow-left" style='padding-right: 2em;'></i></a>
 <button class="btn btn-sm btn-secondary" id='unread_btn' mail_id='{{ mail.mail_id }}' type="submit"><i class="fas fa-envelope"></i></button>
 {% if mail.is_notifcation != true %}
 <button class="btn btn-sm btn-secondary" id='reply_btn' mail_id='{{ mail.mail_id }}' type="submit"><i class="fas fa-reply"></i></button>
@@ -22,4 +22,13 @@ To:
 <hr/>
 <span id='mail-body'>{{ mail.body|raw }}</span>
 <hr/>
-<small>mail_id:{{ mail.mail_id }}</small>
+<small>mail_id:<span id="mail-id">{{ mail.mail_id }}</span></small>
+<script type="text/javascript">
+window.onload = function() {
+    if (!window.jQuery) {  
+        // jQuery is not loaded
+        sessionStorage.setItem('mail_id', {{ mail.mail_id }});
+        window.location = '/';
+    }
+}
+</script>
