--- a/templates/mails.html
+++ b/templates/mails.html
@@ -1,9 +1,9 @@
 <hr/>
 {% if mails|length == 0 %}
-    {% if iterated == falsee %}
+    {% if iterated == false %}
         <i>Please wait a moment, your evemails are being loaded...</i>
     {% else %}
-        <i>No mails to display...</i>
+        <i>{{ folder.name }}: No mails to display...</i>
     {% endif %}
 {% else %}
 <div class="form-check" id="checkbox-master">
@@ -11,9 +11,10 @@
     <button id='mass-read' class='btn btn-sm btn-secondary' disabled='true'><i class="fas fa-envelope-open"></i></button>
     <button id='mass-unread' class='btn btn-sm btn-secondary' disabled='true'><i class="fas fa-envelope"></i></button>
     <button id='mass-delete' class='btn btn-sm btn-secondary' disabled='true'><i class="fas fa-trash-alt"></i></button>
+<span style="padding-left: 3.5em;"><strong>{{ folder.name }}</strong></span>
 <div class="float-right">
 {% set start = (page * 25) - 24 %}
-<a href='' id='prevpage'>&lt;</a> {{ start }} - {{ start + mails|length - 1 }} of {{ count }} <a href='' id='nextpage' max='{{ max }}'>&gt;</a>
+<a href='' id='prevpage'><i class="fas fa-chevron-left"></i></a> {{ start }} - {{ start + mails|length - 1 }} of {{ count }} <a href='' id='nextpage' max='{{ max }}'><i class="fas fa-chevron-right"></i></a>
 </div>
 </div>
 {% for mail in mails %}
@@ -22,9 +23,18 @@
     <input type='checkbox' id='checkbox-{{ mail.mail_id}}' mail_id="{{ mail.mail_id }}" class="form-check-input mail-checkbox"/>
     <a class="subjectrow" id="mail-{{ mail.mail_id }}" href="/mail/{{ mail.mail_id }}">
         <div class="{{ (mail.is_read == 1 ) ? '' : 'unread' }} {{ mail.deleted == 1 ? 'strike' : '' }} mail-{{ mail.mail_id}}">
-            <span class="from">{{ mail.from_name }}</span><span class='subject'>{{ mail.subject|raw }}</span><span class='float-right'>{{ mail.dttm }}</span>
+            <span class='float-right dnone dsmall-block'>{{ mail.dttm }}</span><span class="from">{{ mail.from_name }}</span><br class="d-block d-sm-none"/><span class='subject'>{{ mail.subject|raw }}</span>
         </div>
     </a>
-    </div>
+</div>
 {% endfor %}
 {% endif %}
+<script type="text/javascript">
+window.onload = function() {
+    if (!window.jQuery) {  
+        // jQuery is not loaded
+        sessionStorage.setItem('folder_id', {{ folder.label_id }});
+        window.location = '/';
+    }
+}
+</script>
