--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,16 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/"><img src='/images/podmail.png' height='32' /> PodMail (beta)</a>
-     <ul class="navbar-nav mr-auto"></ul>
-     <ul class="navbar-nav m1-auto">
-      {% if character_id %}
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ character_name }} <img src='https://imageserver.eveonline.com/Character/{{ character_id }}_32.jpg' width='32'/></a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-           <a class="dropdown-item" href="/logout">Logout</a>
-        </div>
-      </li>
-      {% else %}
-      <li><a href="/ccp-login"><img src="/images/ssologin.png" height="30"/></a></li>
-      {% endif %}
+    <button class='btn btn-light btn-small' id='left-hamburger'><span class="navbar-toggler-icon"></span></button>
+    <a class="navbar-brand" href="/"><img src='/images/podmail.png' height='32' /> PodMail (beta)</a>
+    <ul class="navbar-nav mr-auto"></ul>
+    <ul class="navbar-nav m1-auto">
+        {% if character_id %}
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="d-none d-small-block">{{ character_name }} </span>
+                    <img src='https://imageserver.eveonline.com/Character/{{ character_id }}_32.jpg' width='32'/>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item right" href="/logout">Logout</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item right" href='https://github.com/zKillboard/podmail'>GitHub</a>
+                </div>
+            </li>
+        {% else %}
+            <li><a href="/ccp-login"><img src="/images/ssologin.png" height="30"/></a></li>
+        {% endif %}
     </ul>
 </nav>
