--- a/templates/index.html
+++ b/templates/index.html
@@ -11,5 +11,5 @@
       {% include "compose.html" %}
     </div>
   </div>
-<div id="pre-folders" class="d-none">foo</div>
+<div id="pre-folders" class="d-none">Loading...</div>
 {% endblock %}
