--- a/templates/about.html
+++ b/templates/about.html
@@ -2,26 +2,24 @@
 
 {% block content %}
 <hr/>
-<h4>PodMail - an ESI EveMail client (beta)</h4>
-<hr/>
-<img src='/images/podmail-example.png'>
-<div class="clear"></div>
-<hr/>
-<div class='col-6'>
-<p>Easy access to your in game evemails and notifications. PodMail will keep your evemails synced up in game and out, allowing you to mark mails as read, unread, and of course delete them.</p>
-<p>To Do:
-</p>
-<ul>
-<li>Adding/Removing labels from mails</li>
-</ul>
-<p>Check it out!<br/><a href='/ccp-login'><img src='https://podmail.zzeve.com/images/ssologin.png'></a></p>
-<p>Scopes Requested</p>
+<div class="col-6 float-lg-right">
+<a href='/ccp-login'><img src='https://podmail.zzeve.com/images/ssologin.png'></a></p>
+<p>Scopes Requested:</p>
 <ul>
 <li>esi-mail.read_mail.v1</li>
 <li>esi-mail.send_mail.v1</li>
 <li>esi-mail.organize_mail.v1</li>
 <li>esi-characters.read_notifications.v1</li>
 </ul>
-<p>Brought to you by Squizz Caphinator. <a href='https://github.com/zKillboard/podmail' target='_blank'>GitHub</a></p>
+<p>Brought to you by Squizz Caphinator.
+</div>
+<div class="col-6 float-lg-left">
+<p><img src='/images/podmail-example.png' align='left' style="left: -2em; padding-right: 2em;">
+Easy access to your in game evemails and notifications. PodMail will keep your evemails synced up in game and out, allowing you to mark mails as read, unread, and of course delete them.</p>
+<p>To Do:
+</p>
+<ul>
+<li>Adding/Removing labels from mails</li>
+</ul>
 </div>
 {% endblock %}
