--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,22 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <button class='btn btn-light btn-small' id='left-hamburger'><span class="navbar-toggler-icon"></span></button>
-    <a class="navbar-brand" href="/"><img src='/images/podmail.png' height='32' /> PodMail (beta)</a>
+    <a class="navbar-brand" href="/"><img src='/images/podmail.png' height='32' /><span class="hidden-md-down"> PodMail (beta)</span></a>
     <ul class="navbar-nav mr-auto"></ul>
     <ul class="navbar-nav m1-auto">
         {% if character_id %}
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="d-none d-small-block">{{ character_name }} </span>
-                    <img src='https://imageserver.eveonline.com/Character/{{ character_id }}_32.jpg' width='32'/>
+            <li class="nav-item dropdown"><div>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+                    <img src='https://imageserver.eveonline.com/Character/{{ character_id }}_32.jpg' width='32' height='32' class='rounded'/>
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item right" href="/logout">Logout</a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" style='min-width: 100px; max-width: 300px;'>
+                    <span class="dropdown-header right">{{ character_name }}</span>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item right" href='https://github.com/zKillboard/podmail'>GitHub</a>
-                </div>
+                    <a class="dropdown-item right" href="/logout">Logout</a>
+                </div></div>
             </li>
-        {% else %}
-            <li><a href="/ccp-login"><img src="/images/ssologin.png" height="30"/></a></li>
         {% endif %}
     </ul>
 </nav>
