--- a/templates/compose.html
+++ b/templates/compose.html
@@ -1,6 +1,6 @@
 <div id='compose' class='hidden'>
 <hr/>
-<a href='#' id='cancel-compose'><i class="fas fa-arrow-left" style='padding-right: 2em;'></i></a>
+<a href='back' id='cancel-compose'><i class="fas fa-arrow-left" style='padding-right: 2em;'></i></a>
 <hr/>
 <form method='post' action='/compose' id='compose_form'>
     <div class="form-group">
