--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,7 +1,7 @@
 <div id="mail-id-content" style='display: none;'>
 <hr/>
 {% if mail.from %}
-<a href='#' id='showlisting'><i class="fas fa-arrow-left" style='padding-right: 2em;'></i></a>
+<a href='back' id='showlisting'><i class="fas fa-arrow-left" style='padding-right: 2em;'></i></a>
 <button class="btn btn-sm btn-secondary" id='unread_btn' mail_id='{{ mail.mail_id }}' type="submit" data-toggle="tooltip" title="Mark as Unread"><i class="fas fa-envelope"></i></button>
 {% if mail.is_notifcation != true %}
 <button class="btn btn-sm btn-secondary" id='reply_btn' mail_id='{{ mail.mail_id }}' type="submit" data-toggle="tooltip" title="Reply"><i class="fas fa-reply"></i></button>
@@ -9,7 +9,7 @@
 <button class="btn btn-secondary btn-sm" id='delete_btn' mail_id='{{ mail.mail_id }}' type="submit" data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></button>
 {% endif %}
 <hr/>
-<strong><span id='mail-subject'>{{ mail.subject|raw }}</span></strong>
+<h3><span id='mail-subject'>{{ mail.subject|raw }}</span></h3>
 <hr/>
 <span class="float-right">
 <span id="mail-dttm">{{ mail.dttm }}</span><br/>
