--- a/templates/about.html
+++ b/templates/about.html
@@ -11,15 +11,29 @@
 <li>esi-mail.organize_mail.v1</li>
 <li>esi-characters.read_notifications.v1</li>
 </ul>
-<p>Brought to you by Squizz Caphinator.
+<p>Brought to you by Squizz Caphinator.</p>
+<p>Ideas? Issues? Complaints? <a href="https://github.com/zKillboard/podmail/issues" target="_blank">GitHub</a></p>
 </div>
 <div class="col-6 float-lg-left">
-<p><img src='/images/podmail-example.png' align='left' style="left: -2em; padding-right: 2em;">
+<p><img src='/images/podmail-example.png' align='left' style="left: -2em; padding-right: 2em; width: 200px;">
 Easy access to your in game evemails and notifications. PodMail will keep your evemails synced up in game and out, allowing you to mark mails as read, unread, and of course delete them.</p>
-<p>To Do:
+<p>Features:
+<ul>
+<li>View all your EveMails, even the ones you can't see in game.</li>
+<li>Mark read, unread, or delete evemails (and syncs with in game).</li>
+<li>View your notifications.</li>
+<li>Mobile friendly!</li>
+</ul>
 </p>
+<p>To Do:
 <ul>
 <li>Adding/Removing labels from mails</li>
+<li>Add Search</li>
+<li>Themes</li>
+<li>Multi-Char</li>
+<li>Purge inactive accounts (scopes, evemails) after 7 days.</li>
+<li>Map Notifications to look better than default yaml layout.</li>
 </ul>
+</p>
 </div>
 {% endblock %}
