--- a/templates/folders.html
+++ b/templates/folders.html
@@ -1,7 +1,7 @@
 <hr/>
-<button type="submit" id="compose-start" class="btn btn-primary btn-sm">Compose</button>
+<button type="submit" id="compose-start" class="btn btn-primary btn-sm" style='margin: 1em;'>Compose</button>
 {% for folder in folders %}
 <hr/>
-<a href="/folder/{{ folder.label_id }}"  id="folder-{{ folder.label_id }}" folder="{{ folder.label_id }}" class="folder-link folder-{{ folder.label_id }}"><div>{{ folder.name }}<span class="float-right">{% if folder.unread > 0 %}<span class='unread'>{{ folder.unread }}</span>{% endif %}</span></div></a>
+<a href="/folder/{{ folder.label_id }}"  id="folder-{{ folder.label_id }}" folder="{{ folder.label_id }}" class="folder-link folder-{{ folder.label_id }}"><div><span class="">{{ folder.name }}</span><span class="float-right">{% if folder.unread > 0 %}<span class='unread'>{{ folder.unread }}</span>{% endif %}</span></div></a>
 {% endfor %}
 <hr/>
