--- a/templates/index.html
+++ b/templates/index.html
@@ -11,5 +11,6 @@
       {% include "compose.html" %}
     </div>
   </div>
-<div id="pre-folders" class="d-none">Loading...</div>
+<div id="pre-folders" class="d-none"></div>
+<div id="pre-listing" class="d-none"></div>
 {% endblock %}
