--- a/templates/about.html
+++ b/templates/about.html
@@ -12,16 +12,18 @@
 <li>esi-characters.read_notifications.v1</li>
 </ul>
 <p>Brought to you by Squizz Caphinator.</p>
-<p>Ideas? Issues? Complaints? <a href="https://github.com/zKillboard/podmail/issues" target="_blank">GitHub</a></p>
+<p>Ideas? Issues? Complaints? <a href="https://github.com/zKillboard/podmail/issues" target="_blank">GitHub</a> / <a href="https://forums.eveonline.com/t/podmail-beta-an-esi-evemail-client/88490/2" target="_blank">Forums</a> / <a href="https://www.reddit.com/r/evetech/comments/8wczue/beta_podmail_an_esi_evemail_client/" target="_blank">Reddit</a></p>
 </div>
 <div class="col-6 float-lg-left">
-<p><img src='/images/podmail-example.png' align='left' style="left: -2em; padding-right: 2em; width: 200px;">
+<p><img src='/images/podmail-example-20180713.png' align='left' style="left: -2em; padding-right: 2em; width: 200px;">
 Easy access to your in game evemails and notifications. PodMail will keep your evemails synced up in game and out, allowing you to mark mails as read, unread, and of course delete them.</p>
 <p>Features:
 <ul>
 <li>View all your EveMails, even the ones you can't see in game.</li>
+<li>Send EveMails to characters, your corporation (non-npc only), or your alliance (if you're in one).</li>
 <li>Mark read, unread, or delete evemails (and syncs with in game).</li>
 <li>View your notifications.</li>
+<li>Browser notifications when you get a new eve mail.</li>
 <li>Mobile friendly!</li>
 </ul>
 </p>
