--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,10 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.js"></script>
         <script src="/gre/jquery.gre.js"></script>
+        <script type="text/javascript">
+            var character_id = {{ character_id }};
+            var character_name = '{{ character_name }}';
+        </script>
         <script type="text/javascript" src="/js/podmail.js?v={{ random() }}"></script>
     </body>
 </html>
