--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand navbar-light bg-light">
     <button class='btn btn-light btn-small' id='left-hamburger'><span class="navbar-toggler-icon"></span></button>
     <a class="navbar-brand" href="/"><img src='/images/podmail.png' height='32' /><span class="hidden-md-down"> PodMail (beta)</span></a>
     <ul class="navbar-nav mr-auto"></ul>
